Fix on the alignments

--- a/asset/css/editstyles.css
+++ b/asset/css/editstyles.css
@@ -36,10 +36,11 @@
     display: flex;
     margin-top: 20px;
     margin-bottom: 20px;
+    
 }
 .head{
     flex: 1;
-    text-align: center;
+    text-align: left;
 }
 .level{
     display: flex;
@@ -50,6 +51,7 @@
     margin: 20px;
     border: 1px solid gray;
     padding-left: 5px;
+    
 }
 #button{
     
@@ -69,3 +71,5 @@ footer{
     padding: 50px 20px;
     
 }
+
+
